fix: fix minor style adjustments

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,6 +16,7 @@
   },
   "errors": {
     "unknownArticle": "The desired article is unknown.",
+    "unknownDevblog": "The desired devblog is unknown.",
     "pageNotFound": "The page wasn't found.",
     "unauthorized": "You must be authenticated in order to perform this action.",
     "forbidden": "You don't have the required permission to perform this action.",
