--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -16,6 +16,7 @@
   },
   "errors": {
     "unknownArticle": "L'article souhaité est inconnu.",
+    "unknownDevblog": "Le devblog souhaité est inconnu.",
     "pageNotFound": "La page n'a pas été trouvée.",
     "unauthorized": "Vous devez être authentifié afin d'effectuer cette action.",
     "forbidden": "Vous n'avez pas la permission require pour effectuer cette action.",
