--- a/content/blog-posts/qt-5-8.md
+++ b/content/blog-posts/qt-5-8.md
@@ -9,8 +9,8 @@ labels: ["Qt", "Framework", "C++"]
 timestamp: 1490444790
 ---
 
-**Qt 5.8 est désormais disponible en version finale, et les nouveautés aussi.**  
- Les développeurs de Qt ont surtout mis un accent important sur le développement cross-platform afin que leur framework se développe partout.
+**Qt 5.8 est désormais disponible en version définitive, et les nouveautés aussi.**  
+ Les développeurs de Qt ont surtout mis un accent important sur le développement cross platform afin que leur framework se développe partout.
 
  ![product_QtLite_Warp7.png](https://lh4.googleusercontent.com/lQtLra-IhLYSiuCKsCzYZVCvwLGVnKi2Z1hu3BR5Kddc1tFqgfoWOxW3tX64_xq7OwZRo3zz7dBsXmETzjGNlqRiFV9YqC1vqLHdyHei4SHl15cxDm6YHqJKIcuWfWi2KeRvHRNN)
 
@@ -56,7 +56,7 @@ timestamp: 1490444790
  Qt 5.8 est une grande avancée dans le développement multi-plateforme et dans les performances, bien que tout le monde ne la trouve pas forcément utile (je pense surtout à ceux qui débutent).  
  Dans tous les cas, je vous recommande vivement d’installer cette mise à jour, rien que pour le gain de performance et d’espace qui peut être très bénéfique pour vos logiciels.
 
- **Merci d’avoir suivi cet article jusqu’au bout ! N’hésitez-pas à dire votre avis dessus ou même, si vous avez testé cette version, donner vos retours sur celle-ci ! En attendant je vous dit ENJOIE !**
+ **Merci d’avoir suivi cet article jusqu’au bout ! N’hésitez-pas à dire votre avis dessus ou même, si vous avez testé cette version, donner vos retours sur celle-ci ! En attendant je vous dis ENJOIE !**
 
  *Sources : Documentation / Blog Qt officiels*
 
