--- a/content/blog-posts/qt-5-8.md
+++ b/content/blog-posts/qt-5-8.md
@@ -35,7 +35,7 @@ timestamp: 1490444790
 =====
 
  Désormais, vous pourrez économiser des lignes de codes pour vos rendus 2D : Qt 5.8 offre de nouvelles possibilités qui simplifient la vie. Des caches sont créés afin de lancer le programme plus rapidement.  
- Le moteur 3D est aussi affecté, avec de nouveaux *enablers* (groupes d’outils) qui permettent un rendu moderne avec les APIs. Par ailleurs, **Qt Quick** n’est plus relié à OpenGL, ce qui fait que désormais, il sera plus simple de changer d’API 3D, entre DirectX, Vulkan ou d'autres.  
+ Le moteur 3D est aussi affecté, avec de nouveaux *enablers* (groupes d’outils) qui permettent un rendu moderne avec les APIs. Par ailleurs, **Qt Quick** n’est plus relié à OpenGL, ce qui fait que dorénavant, il sera plus simple de changer d’API 3D, entre DirectX, Vulkan ou d'autres.  
  Autre changement, le module **Qt Charts** intègre les graphiques en chandelier (figure ci-dessous), notamment pour la finance.
 
  ![examples_candlestickchart.png](https://lh3.googleusercontent.com/8GXv3S1mzdyUfYGWmSlur3B9WHf0ChV3N7Fwcsw2LMkGpYmXcBLGhPLvoiw-DAzEO3EAe2QTy8IL86xGEQen6hM_ldSM0gOvRsZVKAoHnpN8ja8qmazoTKdcqSrGe1bUUzSzCcAR)
