style: update style for better clarity and reading

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -175,7 +175,8 @@
     "android": "Android",
     "linux": "Linux",
     "windows": "Windows",
-    "apple": "Apple"
+    "apple": "Apple",
+    "ml": "ML"
   },
   "types": {
     "article": "Article",
